# deno_r_haskell_ffi

./: .RData  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  FUNDING.yml  LICENSE  Makefile  README.MD  build-hs-dylib.sh  default.nix  hie.yaml  mod.ts  r-binding.cabal  shell.nix  zig_run.sh
app/: Main.hs  Main_stub.h
app/c-src/: calculator.c  hello.c
core/: bindings.rs  haskell.ts  main.go  mod.ts  r.ts  r_ffi.ts  test.js  usb.ts  utils.ts
core/utils/: build.zig
core/utils/src/: base64.zig  main.zig
crawl/: city.ts  crawl.ts  ips.ts  request_ip.ts  search-swift.ts  search_engine.ts  spacy.ts  test.ts  tor_rq.py  update-db.ts
examples/: func.R  simple.ts
hs_binding/: build-hs-dylib.sh  hs_binding.cabal
hs_binding/app/: Main  Main.hs  main.go
hs_binding/app/c-src/: hsbracket.c  test.c
hs_binding/libs/: libEval
js/: bindings.rs  ffi.ts  haskell.ts  main.py  r.ts  run-script.sh  utils.ts
js/core/: bindings.rs  r.ts
libs/: libEval  libcyber.dylib
playground/: cyber.ts  func.R  haskell.ts  r.ts  zig.ts
py_ffi/: __init__.py  hs_build.py  main.py  noise.py
r_sys/: Cargo.toml  build.rs
r_sys/r/: binding.cc  binding.h
r_sys/r/include/: Rdefines.h  Rinternals.h  S.h
r_sys/src/: binding.cc  binding.h  lib.rs  utils.cc  utils.h
r_sys/src/include/: R.h  Rinterface.h  Rmath.h
src/: bindings.rs  ffi.ts  r.ts
stream/: stream.ts
