cabal-version:      2.4
name:               r-binding
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hoangpq
maintainer:         Hoang Phan

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.MD

library r-binding-lib
    main-is:          app/Main.hs
    exposed-modules:  Main

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -O2 -dynamic -shared -fPIC -o libs/libEval
    c-sources:        c-src/hsbracket.c
    build-depends:    base >= 4.7 && <5
                    , stm
    hs-source-dirs:   app
    default-language: Haskell2010
